# ForexPulsePro

./: .env  .env.example  .replit  BUG_ANALYSIS_REPORT.md  DEPLOYMENT_GUIDE.md  DIGITAL_OCEAN_FIX.md  Dockerfile  ENVIRONMENT_PARITY_VERIFICATION.md  MT5_SETUP_INSTRUCTIONS.md  README.md  SENTIMENT_INTEGRATION.md  app.py  app_server.py  config.py  environment_parity_validator.py  flask_app.py  index.html  install_mt5_bridge.bat  mt5_bridge_local.py  mt5_bridge_setup.md  proxy.py  pyproject.toml  replit.md  requirements.txt  start.sh  start_production.py  test_enhanced_manus_ai.py
.do/: app.yaml
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted-You-are-a-senior-full-stack-engineer-Build-a-production-ready-Forex-Signal-Dashboard-that-1-compu-1757673236640_1757673236642.txt
backend/: ai_capabilities.py  auth.py  database.py  database_cleanup.py  main.py  models.py  scheduler.py  schemas.py
backend/analysis/: backtester.py
backend/api/: environment_validation.py  monitoring.py
backend/config/: environment_validation.py  provider_config.py  provider_validation.py  sentiment_config.py  (+2 more)
components/: __init__.py  advanced_charts.py
logs/: forex_signals.log.1  forex_signals.log.2  forex_signals.log.4  forex_signals.log.5
pages/: 1_overview.py  2_strategies.py  3_risk.py  4_keys.py  5_logs.py  6_docs.py  7_analytics.py  7_news.py  8_kpi_definitions.py  8_reference.py  9_terminology.py
ta-lib/: Makefile  config.status  libtool
tests/: test_api.py  test_engine.py  test_whatsapp.py
utils/: __init__.py  auth.py  cache.py  timezone_utils.py
(+112 files in other folders)
